# e2g

./: .gitignore  .harness_checkpoints.sqlite-shm  .harness_checkpoints.sqlite-wal  .todo  AGENT.md  ARCHITECTURE.md  BUILD.bazel  GEMINI.md  INDEX.md  LOCAL_DEV.md  MODULE.bazel  ONBOARDING_GUIDE.md  RUNNING_LOCALLY.md  WALKTHROUGH.md  WORKSPACE  app.js  autofix_10_line_rule.py  fix_10_line_rule.py  implementer_payload.txt  index.html  mock_mcp.py  pyproject.toml  refactor.py  requirements.txt  requirements_lock.txt  review_sampling.py  run_debug.py  sampling_review_design.md  span_landing.textproto  standards_report.txt  styles.css  test_cli_edge_cases.py  test_dataclass.py  test_fetch.py  test_gemini_strip.py  test_gemini_strip2.py  test_gemini_strip3.py  test_gemini_strip4.py  test_gemini_strip_fix.py  test_instructor_cache.py  (+18 more)
.claude/: mcp.json
.gemini/: AGENTS.md  agent.json  ddd_context.json  mcp.json  orchestrator.md  skills.json
_agents/: BUILD  GEMINI.md  README.md  agents.json  reload_agents.py  skills.json
artifacts/: adversary_long_running_analysis.md  agent_format_reference.md  agent_migration_plan.md  architecture_accuracy_report.md  codex_cli_support_plan.md  final_adversarial_report.md  harness_fix_plan.md  harness_improvements_adversary_review.md  implementation_plan.md  implementation_report.md  implementation_report_v2.md  implementation_report_v3.md  long_running_agent_framework.md  qa_report.md  reviewer_long_running_requirements.md  skill_synthesis_analysis.md  tasks.md  token_optimization_guide.md  token_optimization_report.md  (+6 more)
chat/: main.py  (+3 more)
(+485 files in other folders)
